// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`email queuing 1`] = `Array []`;

exports[`email queuing 2`] = `
Array [
  Object {
    "message": Object {
      "html": "<h3>Comments on your puzzles:</h3><ul><li>BLAST and Mike D commented on <a href=\\"https://crosshare.org/crosswords/puzzle-id-here#utm_source=crosshare&amp;utm_medium=email&amp;utm_campaign=notifications\\">Raises, as young</a></li></ul><h3>Replies to your comments:</h3><ul><li>Mike D replied to your comment(s) on <a href=\\"https://crosshare.org/crosswords/puzzle-id-here#utm_source=crosshare&amp;utm_medium=email&amp;utm_campaign=notifications\\">Raises, as young</a></li></ul>",
      "subject": "New comments on Raises, as young",
      "text": "### Comments on your puzzles:

* BLAST and Mike D commented on [Raises, as young](https://crosshare.org/crosswords/puzzle-id-here#utm_source=crosshare&utm_medium=email&utm_campaign=notifications)


### Replies to your comments:

* Mike D replied to your comment(s) on [Raises, as young](https://crosshare.org/crosswords/puzzle-id-here#utm_source=crosshare&utm_medium=email&utm_campaign=notifications)


",
    },
    "to": Array [
      "mike@example.com",
    ],
  },
  Object {
    "message": Object {
      "html": "<h3>Replies to your comments:</h3><ul><li>Mike D and Mike D replied to your comment(s) on <a href=\\"https://crosshare.org/crosswords/puzzle-id-here#utm_source=crosshare&amp;utm_medium=email&amp;utm_campaign=notifications\\">Raises, as young</a></li></ul>",
      "subject": "Replies to your comment on  and ",
      "text": "### Replies to your comments:

* Mike D and Mike D replied to your comment(s) on [Raises, as young](https://crosshare.org/crosswords/puzzle-id-here#utm_source=crosshare&utm_medium=email&utm_campaign=notifications)


",
    },
    "to": Array [
      "rando@example.com",
    ],
  },
]
`;

exports[`should handle a combination of multiple new comments and nested replies 1`] = `
Array [
  Object {
    "c": "bam",
    "cn": "BLAST",
    "id": "fSEwJorvqOMK5UhNMHa4mu48izl1-comment-bam",
    "k": "comment",
    "p": "puzzle-id-here",
    "pn": "Raises, as young",
    "r": false,
    "u": "fSEwJorvqOMK5UhNMHa4mu48izl1",
  },
  Object {
    "c": "whamo",
    "cn": "Mike D",
    "id": "rando-reply-whamo",
    "k": "reply",
    "p": "puzzle-id-here",
    "pn": "Raises, as young",
    "r": false,
    "u": "rando",
  },
  Object {
    "c": "test",
    "cn": "Mike D",
    "id": "fSEwJorvqOMK5UhNMHa4mu48izl1-comment-test",
    "k": "comment",
    "p": "puzzle-id-here",
    "pn": "Raises, as young",
    "r": false,
    "u": "fSEwJorvqOMK5UhNMHa4mu48izl1",
  },
  Object {
    "c": "test",
    "cn": "Mike D",
    "id": "rando-reply-test",
    "k": "reply",
    "p": "puzzle-id-here",
    "pn": "Raises, as young",
    "r": false,
    "u": "rando",
  },
  Object {
    "c": "foobar",
    "cn": "Mike D",
    "id": "fSEwJorvqOMK5UhNMHa4mu48izl1-reply-foobar",
    "k": "reply",
    "p": "puzzle-id-here",
    "pn": "Raises, as young",
    "r": false,
    "u": "fSEwJorvqOMK5UhNMHa4mu48izl1",
  },
]
`;

exports[`should notify comment author and puzzle author when third party replies 1`] = `
Array [
  Object {
    "c": "baz",
    "cn": "Mike D",
    "id": "fSEwJorvqOMK5UhNMHa4mu48izl1-comment-baz",
    "k": "comment",
    "p": "puzzle-id-here",
    "pn": "Raises, as young",
    "r": false,
    "u": "fSEwJorvqOMK5UhNMHa4mu48izl1",
  },
  Object {
    "c": "baz",
    "cn": "Mike D",
    "id": "dummy-author-id-reply-baz",
    "k": "reply",
    "p": "puzzle-id-here",
    "pn": "Raises, as young",
    "r": false,
    "u": "dummy-author-id",
  },
]
`;

exports[`should notify comment author only when puzzle author replies 1`] = `
Array [
  Object {
    "c": "baz",
    "cn": "Mike D",
    "id": "dummy-author-id-reply-baz",
    "k": "reply",
    "p": "puzzle-id-here",
    "pn": "Raises, as young",
    "r": false,
    "u": "dummy-author-id",
  },
]
`;

exports[`should notify for a new comment by somebody else 1`] = `
Array [
  Object {
    "c": "LwgoVx0BAskM4wVJyoLj",
    "cn": "Mike D",
    "id": "fSEwJorvqOMK5UhNMHa4mu48izl1-comment-LwgoVx0BAskM4wVJyoLj",
    "k": "comment",
    "p": "puzzle-id-here",
    "pn": "Raises, as young",
    "r": false,
    "u": "fSEwJorvqOMK5UhNMHa4mu48izl1",
  },
]
`;

exports[`should notify for a reply to own comment on own puzzle 1`] = `
Array [
  Object {
    "c": "bar",
    "cn": "Jim",
    "id": "fSEwJorvqOMK5UhNMHa4mu48izl1-reply-bar",
    "k": "reply",
    "p": "puzzle-id-here",
    "pn": "Raises, as young",
    "r": false,
    "u": "fSEwJorvqOMK5UhNMHa4mu48izl1",
  },
]
`;

exports[`should notify for multiple comments by somebody else 1`] = `
Array [
  Object {
    "c": "bar",
    "cn": "Jim",
    "id": "fSEwJorvqOMK5UhNMHa4mu48izl1-comment-bar",
    "k": "comment",
    "p": "puzzle-id-here",
    "pn": "Raises, as young",
    "r": false,
    "u": "fSEwJorvqOMK5UhNMHa4mu48izl1",
  },
  Object {
    "c": "bam",
    "cn": "Tom",
    "id": "fSEwJorvqOMK5UhNMHa4mu48izl1-comment-bam",
    "k": "comment",
    "p": "puzzle-id-here",
    "pn": "Raises, as young",
    "r": false,
    "u": "fSEwJorvqOMK5UhNMHa4mu48izl1",
  },
]
`;
